# aga8

./: .gitignore  Cargo.toml  README.md  build.rs  plot.dem
.github/workflows/: rust.yml
benches/: benchmarks.rs
examples/: demo.rs  gerg_demo.rs  iteration_test.rs
src/: composition.rs  detail.rs  detail_external.rs  ffi.rs  gerg2008.rs  gerg2008_external.rs  gerg2008const.rs  lib.rs
tests/: detail_tests.rs  gerg-tests.rs  integration-tests.rs  natural_gas_calculations.csv  natural_gas_compositions.csv  test_cases.rs  test_data.csv
