[package]
name = "aga8"
description = "AGA8 and GERG2008 equations of state"
version = "0.2.0"
authors = ["Roy Vegard Ovesen <roy.vegard.ovesen@gmail.com>"]
edition = "2018"
repository = "https://github.com/royvegard/aga8.git"
license-file = "LICENSE"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
extern = []

[package.metadata.winres]
OriginalFilename = "aga8.dll"

[lib]
name = "aga8"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false

[build-dependencies]
winres = "0.1"
