[package]
name = "aga8"
description = "AGA8 and GERG2008 equations of state"
version = "0.5.1"
authors = ["Roy Vegard Ovesen <roy.vegard.ovesen@gmail.com>"]
edition = "2021"
repository = "https://github.com/royvegard/aga8.git"
license-file = "LICENSE"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
extern = []

[package.metadata.winres]
OriginalFilename = "aga8.dll"

[lib]
name = "aga8"
crate-type = ["rlib", "staticlib", "cdylib"]

[profile.bench]
debug = 2
opt-level = 3

[dependencies]

[dev-dependencies]
assert_float_eq = "1.1"
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "benchmarks"
harness = false

[build-dependencies]
winres = "0.1"
cbindgen = "0.28"
